--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "ext-soap": "*",
         "nesbot/carbon": "^2.64.0",
+        "robrichards/xmlseclibs": "^3.1",
         "spatie/array-to-xml": "^2.15"
     },
     "autoload": {
