--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "ext-soap": "*",
+        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "nesbot/carbon": "^2.64.0",
         "robrichards/xmlseclibs": "^3.1",
         "spatie/array-to-xml": "^2.15"
