--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "nesbot/carbon": "^2.64.0",
         "robrichards/xmlseclibs": "^3.1",
-        "spatie/array-to-xml": "^2.15"
+        "spatie/array-to-xml": "^2.15",
+        "splitbrain/php-archive": "^1.3"
     },
     "autoload": {
         "psr-4": {
